<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNum1"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtNum1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/num1"
                android:layout_width="306dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txtNumEntero"
                android:inputType="text"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNum2"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtNum2"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/num2"
                android:layout_width="306dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txtNumEntero"
                android:inputType="text"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="50dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="center">

            <Button
                android:id="@+id/btnSumar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:insetLeft="12dp"
                android:insetTop="0dp"
                android:insetRight="12dp"
                android:insetBottom="0dp"
                android:text="@string/btnSuma"
                android:textAlignment="center"
                android:textSize="34sp"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btnRestar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:insetLeft="12dp"
                android:insetTop="0dp"
                android:insetRight="12dp"
                android:insetBottom="0dp"
                android:text="@string/btnResta"
                android:textAlignment="center"
                android:textSize="34sp"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:insetLeft="12dp"
                android:insetTop="0dp"
                android:insetRight="12dp"
                android:insetBottom="0dp"
                android:text="@string/btnMultiplicacion"
                android:textAlignment="center"
                android:textSize="34sp"
                app:cornerRadius="60dp" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:insetLeft="12dp"
                android:insetTop="0dp"
                android:insetRight="12dp"
                android:insetBottom="0dp"
                android:text="@string/btnDivision"
                android:textAlignment="center"
                android:textSize="34sp"
                app:cornerRadius="60dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/red"
            android:text="@string/btnBorrar"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>